# terminal-tree

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  README_EN.md  RELEASE_CHECKLIST.md  pyproject.toml  requirements.txt  run.py
.github/: ISSUE_TEMPLATE.md
examples/: README.md  compact_tree.py  simple_tree_app.py
scripts/: README.md  install_simple_tree.sh  setup_tree_aliases.sh  test_tree_setup.sh
terminal_tree_plugin/: __init__.py  __main__.py  app.py  main.py
terminal_tree_plugin/styles/: app.tcss
terminal_tree_plugin/utils/: __init__.py  file_utils.py  path_utils.py
terminal_tree_plugin/widgets/: __init__.py  file_preview.py  path_input.py  tree_view.py
