[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-tree"
version = "1.0.0"
description = "A modern terminal file system navigator with interactive tree view"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Terminal Tree Contributors"}
]
maintainers = [
    {name = "Terminal Tree Contributors"}
]
keywords = [
    "terminal", "tree", "file-manager", "textual", "tui", "cli", 
    "file-explorer", "directory-tree", "filesystem"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "textual>=0.45.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/terminal-tree"
Repository = "https://github.com/yourusername/terminal-tree.git"
Documentation = "https://github.com/yourusername/terminal-tree#readme"
Issues = "https://github.com/yourusername/terminal-tree/issues"
Changelog = "https://github.com/yourusername/terminal-tree/blob/main/CHANGELOG.md"

[project.scripts]
terminal-tree = "terminal_tree_plugin.main:main"

[tool.setuptools.packages.find]
include = ["terminal_tree_plugin*"]

[tool.setuptools.package-data]
terminal_tree_plugin = ["styles/*.tcss"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["terminal_tree_plugin"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]